# mcp-confluence-documentation-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  TAD.md  docker-compose.yml  portfolio.json  pyproject.toml  requirements-semantic.txt  requirements.txt
.github/workflows/: ci.yml  nightly-eval.yml  nightly-sync.yml
eval/: golden_dataset.yaml
mock_cern_confluence/: lhc_cryo_troubleshooting.html  linac4_injection_sop.html  sps_beam_instrumentation.html
scripts/: deploy_hf_space.py  seed_confluence.py
src/: agent_loop.py  auth.py  config.py  eval_suite.py  llm.py  metrics.py  parser.py  retrieval.py  server.py  settings.py  sources.py  vector_store.py
tests/: __init__.py  conftest.py  test_agent_loop.py  test_auth.py  test_metrics.py  test_parser.py  test_retrieval.py  test_server_rbac.py  test_sources.py  test_sso_auth.py  test_vector_store.py
